--- a/styles/style.css
+++ b/styles/style.css
@@ -1,16 +1,28 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz@0,14..32;1,14..32&display=swap');
 
+* {
+    box-sizing:border-box;
+    margin-left: auto;
+    margin-right: auto;
+}
 .apresentacao {
     color: #0A3871;
     background-color: #F3F5FC;
     height: 100vh;
-    padding: 0% 5%;
     display: flex;
     justify-content: space-between;
 
 }
 body {
     background-color: #F3F5FC;
+    margin: 0;
+    min-height: 100dvh;
+    overflow: hidden;
+    width: 1440px;
+    height: 1024px;
+    top: 622px;
+    left: -2277px;
+    
 }
 .cabecalho {
     width:120px;
@@ -18,6 +30,18 @@ body {
     top: 40px;
     left: 40px;
     gap: 40px;
+    margin-top: 5%;
+    margin-left: 50px;
+    text-align: center;
+    justify-content: flex-start;
+    
+
+}
+.imagem__alura {
+    width: 31.09px;
+    height: 48px;
+    left: 44px;
+    
 
 }
 .apresentacao__conteudo__header {
@@ -30,14 +54,19 @@ body {
 }
 .apresentacao__conteudo {
     color:#0A3871;
-    background-color: #f6f6f6;
+    background-color: #F3F5FC;
+    display:flex;
+    flex-direction: column;
+
 }
 .apresentacao__conteudo__texto {
     width:680px;
     height: 48px;
+    flex-grow: 0;
+    flex-shrink: 0;
     border: 0 none;
     outline: 0;
-    color: #0A3871;
+    color: black;
     background-color: #F3F5FC ;
     font-family: inter;
     font-size: 32px;
@@ -48,15 +77,6 @@ body {
 
 }
 
-.apresentacao__conteudo__imagem {
-    width: 400px;
-    height: 944px;
-    left: 1000px;
-    border-radius: 32px;
-    padding: 10px;
-    padding: 0% 11% 0% 0%;
-    
-}
 .apresentacao__aviso {
     color: #495057;
 
@@ -76,6 +96,10 @@ body {
     gap: 24x;
     border: 1px solid  #0A3871;
     border-radius: 20px;
+    border-bottom-style: none;
+    border-left-style: none;
+    border-right-style: none;
+    border-top-style: none;
     padding: 0px 0px;
     opacity: 0px;
 
@@ -96,10 +120,37 @@ body {
     height: 67px;
     border: 1px;
     border-radius: 24px;
+    border-bottom-style: solid;
+    border-left-style: solid;
+    border-right-style: solid;
+    border-top-style: solid;
     gap: 80px;
+}
+.apresentacao__imagens1 {
+    margin: 0%;
+    padding: 0%;
+    width: 400px;
+    height: 944px;
+    top: 40px;
+    left: 1000px;
+    gap: 0px;
+    border-radius: 32px 0px 0px 0px;
+    background: #FFFFFF;
+    border-radius: 20px;
+    box-shadow: 0px 24px 32px -8px #00000014;
+}
+.apresentacao__imagem3 {
+    width: 336px;
+    height: 58px;  
+
+}
+.apresentacao__imagem4 {
+    width: 336px;
+    height: 48px;
 }
 .rodape {
     color: #0A3871;
     text-align: center;
     background-color: #A2DAE0;
+
 }
