add modificacoes das classes

--- a/styles/style.css
+++ b/styles/style.css
@@ -110,13 +110,13 @@ textarea {
 
 }
 
-.aviso1  {
+.aviso {
     font-weight: 700;
     font-size: 24px;
     color:#343A40;
 }
 
-.aviso2 {
+.orientacao-entrada{
     color:#495057;
 }
 
