--- a/styles/style.css
+++ b/styles/style.css
@@ -20,7 +20,6 @@ body {
 
 main {
     display: flex;
-    gap: 10rem;
     flex-grow: 1;
     padding: 1.5rem;
     justify-content: space-evenly;
@@ -47,6 +46,7 @@ header {
 textarea {
     font-size: 2rem;
     flex-grow:1;
+    padding: 0;
     border:none;
     outline: none;
     resize: none;
@@ -135,4 +135,31 @@ footer {
 footer a {
     color: var(--color);
 }
+@media (max-width: 768px) {
+   main {
+        flex-direction: column;
+        justify-content: start;
+        gap: 2rem;
+   }
+   
+   .apresentacao__informativa {
+        justify-content: center;
+        }
+
+    .apresentacao__conteudo {
+        padding-top: 0;
+    }
+   .apresentacao__principal {
+        flex-wrap: wrap;
+    }
+
+    .apresentacao__resultado {
+        resize: none;
+    }
+    .apresentacao__resultado img:nth-of-type(1) {
+        display: none;
+    }
+    
+    
+  }
 
